# LegiTest

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  METHODOLOGY.md  README.md  SECURITY.md  setup.sh
.github/: FUNDING.yml
config/client/: organes.json.example  picks.json.example
config/server/: config.toml.example  platforms.json.example
migrations/postgres/20200601000000_create_db/: up.sql
migrations/postgres/20211019000000_add_calc_methods/: down.sql  up.sql
scripts/client/: compile-results.py  download-images.sh  download-opendata.sh  httpserver.py
scripts/filters/: generate.sh  ip2dec.sh
src/: abuseipdb.rs  canvas.rs  errors.rs  main.rs  matching.rs  reports.rs  tweet.rs
src/config/: global.rs  methods.rs  mod.rs  structs.rs
src/database/: methods.rs  mod.rs  models.rs  schema.rs  structs.rs  views.rs
src/handlers/: csrftoken.rs  mod.rs  reports.rs  results.rs  submit.rs
static/: index.html
static/assets/css/: index.css  table.css
static/assets/js/: index.js
static/assets/txt/: pgp-key.txt  robots.txt  security.txt  sitemap.xml
