[package]
name = "quelparti"
version = "1.2.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.10"
actix-session = "0.5.0-beta.3"
actix-files = "0.6.0-beta.8"
awc = { version = "3.0.0-beta.9", features = ["rustls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "network-address"] }
diesel_migrations = "1.4"
ipnetwork = "0.18"
csrf = "0.4"
once_cell = "1.8"
csv = "1.1"
toml = "0.5"
twapi-reqwest = "0.2"
image = { version = "0.23", default-features = false, features = ["png"] }
imageproc = "0.22"
rusttype = "0.9"
