[package]
name = "quelparti"
version = "1.2.2"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.20"
actix-session = "0.5.0-beta.7"
actix-files = "0.6.0-beta.13"
awc = { version = "3.0.0-beta.18", features = ["rustls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "network-address"] }
diesel_migrations = "1.4"
ipnetwork = "0.18"
csrf = "0.4"
once_cell = "1.9"
csv = "1.1"
toml = "0.5"
twapi-reqwest = "0.2"
image = { version = "0.24", default-features = false, features = ["png"] }
imageproc = "0.22"
rusttype = "0.9"
